--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paying to Canadia bank merchant</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h2>Canadia bank merchant</h2>
-      <form action="#" method="post" id="amountForm">
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" required />
-        <input type="submit" value="Pay" />
-      </form>
+    <div class="container mt-5">
+      <div class="card col-md-6 mx-auto">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Canadia bank merchant</h2>
+          <form action="#" method="post" id="amountForm">
+            <div class="form-group">
+              <label for="amount">Amount:</label>
+              <input
+                type="number"
+                class="form-control"
+                id="amount"
+                name="amount"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Pay Now
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
-
     <script>
       $(document).ready(function () {
         $("#amountForm").submit(function (event) {
