--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             placeholder="Enter amount"
             aria-label="Amount"
             aria-describedby="basic-addon2"
+            autofocus
           />
           <div class="input-group-append">
             <span class="input-group-text" id="basic-addon2">$</span>
