--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     </div>
 
     <script>
+      var amount = document.getElementById("amount").value;
+
+      //focus on amount input
+      document.getElementById("amount").focus();
+
       function onBridgeReady() {
         WeixinJSBridge.invoke(
           "getBrandWCPayRequest",
@@ -60,8 +65,6 @@
       //submit payment
       document.getElementById("pay").addEventListener("click", pay);
       function pay() {
-        var amount = document.getElementById("amount").value;
-
         if (typeof WeixinJSBridge == "undefined") {
           if (document.addEventListener) {
             document.addEventListener(
