--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
   </head>
   <body>
     <div class="container mt-5">
-      <div class="mb-5">
+      <div class="mb-5 d-flex flex-column align-items-center">
+        <div
+          style="width: 50px; height: 50px"
+          class="d-flex justify-content-center align-items-center"
+        >
+          <img
+            src="/images/logo.jpg"
+            class="img-fluid"
+            style="max-width: 100%; max-height: 100%; border-radius: 10px"
+          />
+        </div>
         <p class="text-center mb-0">You're about to pay</p>
         <h5 class="text-center">Canadia bank merchant</h5>
       </div>
