--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           class="d-flex justify-content-center align-items-center"
         >
           <img
-            src="/images/logo.jpg"
+            src="https://marketplace.canva.com/EAFauoQSZtY/1/0/1600w/canva-brown-mascot-lion-free-logo-qJptouniZ0A.jpg"
             class="img-fluid"
             style="max-width: 100%; max-height: 100%; border-radius: 10px"
           />
