--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
       //focus on amount input
       document.getElementById("amount").focus();
+      document.getElementById("amount").blur();
 
       function onBridgeReady() {
         WeixinJSBridge.invoke(
