--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         WeixinJSBridge.invoke(
           "getBrandWCPayRequest",
           {
-            appId: appId,
+            appId: a,
             timeStamp: timeStamp,
             nonceStr: nonceStr,
             package: "prepay_id=" + prepayId,
