--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <script src="forge.js"></script>
     <script src="util.js"></script>
+    <script src="helper.js"></script>
   </head>
   <body>
     <div class="container mt-4">
