--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       //submit payment
       document.getElementById("pay").addEventListener("click", () => {
         alert("paying...", {
-          appId: accountId,
+          appId: "76767676767",
           timeStamp: timeStamp,
           nonceStr: nonceStr,
           package: "prepay_id=" + prepayId,
