--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       var accountId = "wxdff39e214f645db5";
       var timeStamp = generateTimestamp();
       var nonceStr = generateNonceStr();
-      var prepayId = "";
+      var prepayId = "wx0411210712996897aac58c1cbb9af40000";
 
       var message =
         accountId +
@@ -110,17 +110,8 @@
         );
       };
 
-      //call api to create order
-      const orderPlacementApi = (userId, amount) => {
-        return "wx0410290845233997aac58c1c8d6ea20000";
-      };
-
       //submit payment
       document.getElementById("pay").addEventListener("click", () => {
-        var amount = document.getElementById("amount").value;
-        var userId = "oEd0BwrC72_318e7AnQlzl0hnSYo";
-        prepayId = orderPlacementApi(amount, userId);
-
         if (typeof WeixinJSBridge == "undefined") {
           if (document.addEventListener) {
             document.addEventListener(
