--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         <button id="pay" class="btn btn-primary btn-block" disabled>Pay</button>
       </div>
     </div>
-
     <script>
       //get code and state from URL
       const queryString = window.location.search;
@@ -117,8 +116,45 @@
         );
       };
 
+      const orderPlacementApi = (openId, amount) => {
+        //request body
+        var req = {
+          sp_appid: accountId,
+          sp_mchid: "1487925572",
+          sub_mchid: "613490525",
+          out_trade_no: "YX202111100058JSAPI",
+          merchant_category_code: "5814",
+          notify_url:
+            "https://digital.canadiabank.com/cnb/sit/RefundNotification",
+          trade_type: "JSAPI",
+          amount: {
+            total: amount,
+            currency: "CNY",
+          },
+          payer: {
+            sp_openid: openId,
+          },
+          description: "QR code test",
+        };
+
+        return "wx081139312400347ace560e686d8a5b0000";
+      };
+
+      const getUserToken = () => {
+        //https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdff39e214f645db5&redirect_uri=https://h5-sage.vercel.app/index.html&response_type=code&scope=snsapi_base&state=STATE#wechat_redirect
+        return "oEd0BwrC72_318e7AnQlzl0hnSYo";
+      };
+
       //submit payment
       document.getElementById("pay").addEventListener("click", () => {
+        //get user token
+        var openId = getUserToken();
+
+        //call order api
+        var amount = document.getElementById("amount").value;
+        prepayId = orderPlacementApi(openId, amount);
+
+        //confirm payment
         if (typeof WeixinJSBridge == "undefined") {
           if (document.addEventListener) {
             document.addEventListener(
