--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       var accountId = "wxdff39e214f645db5";
       var timeStamp = generateTimestamp();
       var nonceStr = generateNonceStr();
-      var prepayId = "wx08110343160555a1490678bd6874e10000";
+      var prepayId = "";
 
       var message =
         accountId +
@@ -153,7 +153,7 @@
         //call order api
         var amount = document.getElementById("amount").value;
         prepayId = orderPlacementApi(openId, amount);
-
+        console.log(prepayId);
         //confirm payment
         if (typeof WeixinJSBridge == "undefined") {
           if (document.addEventListener) {
