--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       var accountId = "wxdff39e214f645db5";
       var timeStamp = generateTimestamp();
       var nonceStr = generateNonceStr();
-      var prepayId = "";
+      var prepayId = "wx081139312400347ace560e686d8a5b0000";
 
       var message =
         accountId +
@@ -147,13 +147,13 @@
 
       //submit payment
       document.getElementById("pay").addEventListener("click", () => {
-        //get user token
-        var openId = getUserToken();
+        // //get user token
+        // var openId = getUserToken();
 
-        //call order api
-        var amount = document.getElementById("amount").value;
-        prepayId = orderPlacementApi(openId, amount);
-        console.log(prepayId);
+        // //call order api
+        // var amount = document.getElementById("amount").value;
+        // prepayId = orderPlacementApi(openId, amount);
+
         //confirm payment
         if (typeof WeixinJSBridge == "undefined") {
           if (document.addEventListener) {
