--- a/index.html
+++ b/index.html
@@ -156,17 +156,21 @@
 
         //confirm payment
         if (typeof WeixinJSBridge == "undefined") {
+          alert("WeixinJSBridge is undefined");
           if (document.addEventListener) {
+            alert("WeixinJSBridge is undefined 2");
             document.addEventListener(
               "WeixinJSBridgeReady",
               onBridgeReady,
               false
             );
           } else if (document.attachEvent) {
+            alert("WeixinJSBridge is undefined 3");
             document.attachEvent("WeixinJSBridgeReady", onBridgeReady);
             document.attachEvent("onWeixinJSBridgeReady", onBridgeReady);
           }
         } else {
+          alert("WeixinJSBridge is not undefined");
           onBridgeReady();
         }
       });
